horizontal scroll issues resolved

--- a/src/components/listener-management/listeners-list/listeners.scss
+++ b/src/components/listener-management/listeners-list/listeners.scss
@@ -184,8 +184,8 @@
         gap: 0.5rem;
 
         img {
-          width: 20px;
-          height: 20px;
+          width: 28px;
+          height: 28px;
           cursor: pointer;
           opacity: 0.7;
           transition: all 0.2s ease;
