--- a/src/components/user-management/active-users/activeUsers.scss
+++ b/src/components/user-management/active-users/activeUsers.scss
@@ -147,8 +147,8 @@
         gap: 0.75rem;
 
         img {
-          width: 20px;
-          height: 20px;
+          width: 28px;
+          height: 28px;
           cursor: pointer;
           opacity: 0.7;
           transition: all 0.2s ease;
