--- a/src/components/user-management/recent-users/recentUsers.scss
+++ b/src/components/user-management/recent-users/recentUsers.scss
@@ -195,6 +195,16 @@
           display: flex;
           align-items: center;
           justify-content: flex-start;
+          gap: 10px;
+          img {
+            width: 28px;
+            height: 28px;
+            cursor: pointer;
+            transition: transform 0.2s ease;
+            &:hover {
+              transform: scale(1.15);
+            }
+          }
         }
   
         div:nth-child(1) {
