--- a/src/components/user-management/user-list/users.scss
+++ b/src/components/user-management/user-list/users.scss
@@ -191,8 +191,8 @@
         gap: 0.75rem;
 
         img, svg {
-          width: 22px;
-          height: 22px;
+          width: 28px;
+          height: 28px;
           cursor: pointer;
           opacity: 0.8;
           transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
